k8s/ai-query-hub-frontend/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-query-hub-ingress
  namespace: ai-query-hub
  annotations:
    spec.ingressClassName: traefik
spec:
  rules:
    - host: ai-query-hub.pre.smartdinings.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ai-query-hub-frontend
                port:
                  number: 80
